# ngen-platform

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
adapters/claude-agent-sdk-adapter/: pyproject.toml
adapters/claude-agent-sdk-adapter/src/ngen_claude_sdk/: __init__.py  adapter.py
adapters/claude-agent-sdk-adapter/tests/: test_adapter.py
adapters/crewai-adapter/: pyproject.toml
adapters/crewai-adapter/src/ngen_crewai/: __init__.py  adapter.py
adapters/crewai-adapter/tests/: test_adapter.py
adapters/google-adk-adapter/: pyproject.toml
adapters/google-adk-adapter/src/ngen_adk/: __init__.py  adapter.py
adapters/google-adk-adapter/tests/: test_adapter.py
adapters/langgraph-adapter/: pyproject.toml
adapters/langgraph-adapter/src/langgraph_adapter/: __init__.py  adapter.py
adapters/langgraph-adapter/tests/: test_adapter.py
adapters/ms-agent-framework-adapter/: pyproject.toml
adapters/ms-agent-framework-adapter/src/ngen_msaf/: __init__.py  adapter.py
adapters/ms-agent-framework-adapter/tests/: test_adapter.py
cli/: pyproject.toml
cli/src/ngen_cli/: __init__.py  client.py  main.py  output.py
cli/src/ngen_cli/commands/: health.py  mcp.py  model.py  policy.py  workflow.py
cli/tests/: conftest.py  test_cli_health.py  test_cli_mcp.py  test_cli_model.py  test_cli_policy.py  test_cli_workflow.py  test_client.py
libs/ngen-common/: pyproject.toml
libs/ngen-common/src/ngen_common/: __init__.py  auth.py  auth_config.py  config.py  cors.py  error_handlers.py  errors.py  events.py  health.py  logging.py  observability.py
libs/ngen-common/tests/: test_auth.py  test_config.py  test_error_handlers.py  test_errors.py  test_events.py  test_health.py  test_logging.py  test_memory_events.py  test_observability.py
libs/ngen-framework-core/: pyproject.toml
libs/ngen-framework-core/src/ngen_framework_core/: __init__.py  crd.py  executor.py  memory_interceptor.py  memory_manager.py  memory_registry.py  memory_store.py  protocols.py  registry.py  schema_validator.py  state_store.py
libs/ngen-framework-core/tests/: test_crd.py  test_executor.py  test_memory_crd.py  test_memory_interceptor.py  test_memory_manager.py  test_memory_metrics.py  test_memory_protocols.py  test_memory_registry.py  test_memory_store.py  test_memory_store_redis.py  test_protocols.py  test_registry.py  test_schema_validator.py  test_state_store.py
libs/ngen-mock-llm/: Dockerfile  pyproject.toml
libs/ngen-mock-llm/src/ngen_mock_llm/: __init__.py  models.py  server.py  strategies.py
libs/ngen-mock-llm/tests/: conftest.py  test_models.py  test_server.py
libs/ngen-sdk/: pyproject.toml
libs/ngen-sdk/src/ngen_sdk/: __init__.py  client.py
libs/ngen-sdk/tests/: conftest.py  test_client_init.py  test_governance_sdk.py  test_mcp_sdk.py
services/governance-service/: Dockerfile  pyproject.toml
services/governance-service/src/governance_service/: app.py  budget_tracker.py  engine.py  models.py  redis_repository.py  repository.py  routes.py
services/governance-service/tests/: conftest.py  test_budget_tracker.py  test_evaluation.py  test_health.py  test_policy_crud.py
services/mcp-manager/: Dockerfile  pyproject.toml
services/mcp-manager/src/mcp_manager/: app.py  builtin_registry.py  models.py  repository.py  routes.py  seed.py  transport.py
services/mcp-manager/src/mcp_manager/documents/: __init__.py  chunker.py  embeddings.py  index.py  models.py  parser.py  pipeline.py  routes.py  store.py
services/mcp-manager/src/mcp_manager/handlers/: __init__.py  web_search.py  (+2 more)
services/mcp-manager/tests/: conftest.py  test_builtin_registry.py  test_document_chunker.py  test_document_index.py  test_document_parser.py  test_document_pipeline.py  test_document_store.py  test_embedding_client.py  test_end_to_end_tools.py  test_handler_document_intelligence.py  test_handler_knowledge_base.py  test_handler_web_search.py  test_invocation.py  test_lifecycle_events.py  test_server_crud.py  test_tool_catalog.py  test_transport.py
services/metering-service/: Dockerfile  pyproject.toml
services/metering-service/src/metering_service/: app.py
services/metering-service/tests/: test_metering.py
services/model-gateway/: Dockerfile  pyproject.toml
services/model-gateway/src/model_gateway/: __init__.py  app.py  config.py  cost_tracker.py  model_sync.py  rate_limiter.py  redis_rate_limiter.py  registry_sync.py  router.py
services/model-gateway/tests/: conftest.py  test_api.py  test_cost_tracker.py  test_model_sync.py  test_providers.py  test_rate_limiter.py  test_registry_sync.py  test_router.py
services/model-registry/: Dockerfile  pyproject.toml
services/model-registry/src/model_registry/: __init__.py  app.py  config.py  models.py  repository.py  routes.py
services/model-registry/tests/: conftest.py  test_api.py  test_lifecycle_events.py  test_models.py
services/onboarding-agent/: Dockerfile  pyproject.toml
services/onboarding-agent/src/onboarding_agent/: app.py
services/onboarding-agent/tests/: test_onboarding.py
services/tenant-service/: Dockerfile  pyproject.toml
services/tenant-service/src/tenant_service/: __init__.py  config.py
services/tenant-service/tests/: conftest.py  test_api.py  test_domain_models.py  test_repository.py
services/workflow-engine/: Dockerfile  pyproject.toml
services/workflow-engine/src/workflow_engine/: __init__.py  agent_manager.py  app.py  config.py  default_adapter.py  engine.py  errors.py  governance.py  models.py  resilience.py  routes.py  sse.py  state.py  topology.py  version_routes.py  version_store.py
services/workflow-engine/tests/: conftest.py  test_agent_manager.py  test_agent_memory.py  test_api.py  test_conditions.py  test_engine.py  test_governance_integration.py  test_memory_events_integration.py  test_memory_observability.py  test_memory_pipeline.py  test_platform_agents.py  test_resilience.py  test_rich_adapter.py  test_sse.py  test_sse_stream.py  test_state.py  test_tenant_isolation.py  test_topology.py  test_topology_comprehensive.py  test_topology_enhanced.py  test_workflow_events.py  test_workflow_generate.py
(+137 files in other folders)
