[project]
name = "ngen-cli"
version = "0.1.0"
description = "CLI tool for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ngen_cli"]
