[project]
name = "crewai-adapter"
version = "0.1.0"
description = "CrewAI adapter for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ngen-framework-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ngen_crewai"]
