[project]
name = "google-adk-adapter"
version = "0.1.0"
description = "Google ADK adapter for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ngen-framework-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_adk_adapter"]
