[project]
name = "langgraph-adapter"
version = "0.1.0"
description = "LangGraph adapter for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ngen-framework-core",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.entry-points."ngen.adapters"]
langgraph = "langgraph_adapter:LangGraphAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_adapter"]
