[project]
name = "ms-agent-framework-adapter"
version = "0.1.0"
description = "Microsoft Agent Framework adapter for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ngen-framework-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ngen_msaf"]
