[project]
name = "ngen-common"
version = "0.1.0"
description = "Common utilities and shared models for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3.0",
    "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ngen_common"]
