[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngen-mock-llm"
version = "0.1.0"
description = "Mock LLM provider for NGEN platform testing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ngen_mock_llm"]
