[project]
name = "ngen-sdk"
version = "0.1.0"
description = "SDK for interacting with the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ngen_sdk"]
