[project]
name = "governance-service"
version = "0.1.0"
description = "Governance service for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governance_service"]
