[project]
name = "mcp-manager"
version = "0.1.0"
description = "MCP manager service for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ngen-common",
    "nats-py>=2.0",
    "httpx>=0.27",
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_manager"]

[tool.uv.sources]
ngen-common = { workspace = true }
