[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-gateway"
version = "0.1.0"
description = "NGEN Model Gateway — LLM proxy with routing, rate limiting, and cost tracking"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.52",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ngen-mock-llm",
]

[tool.hatch.build.targets.wheel]
packages = ["src/model_gateway"]
