[project]
name = "model-registry"
version = "0.1.0"
description = "Model registry service for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "ngen-common",
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_registry"]

[tool.uv.sources]
ngen-common = { workspace = true }
