[project]
name = "tenant-service"
version = "0.1.0"
description = "Tenant management service for the NGEN platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenant_service"]
